[gd_scene load_steps=2 format=3 uid="uid://c6x0wtdypax3"]

[ext_resource type="Script" uid="uid://5ndforohq64g" path="res://scripts/main_menu.gd" id="1_8gy84"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gy84")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -25.0
offset_right = 80.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SFXContainer" type="HBoxContainer" parent="SettingMenu/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="SettingMenu/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "SFX Volume: 75%"

[node name="SFXSlider" type="HSlider" parent="SettingMenu/VBoxContainer/SFXContainer"]
layout_mode = 2

[node name="MusicContainer" type="HBoxContainer" parent="SettingMenu/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingMenu/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music Volume: 75%"

[node name="MusicSlider" type="HSlider" parent="SettingMenu/VBoxContainer/MusicContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingMenu/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
